2000-05-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Remove mime-edit-version.
	(mime-edit-message-default-max-lines): Increment to 5000.
	(mime-edit-split-and-send):
	(mime-edit-exit):
	Shut up byte compiler.

2000-05-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-automatic-conversion): New variable.
	(mime-display-text): Decode CTE when FLIM 1.14.

2000-05-12  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view (mime-display-entity): Show header when message
	is attachment.
	(mime-display-text): Pass 7bit when no CTE is specified.
	Use mime-entity-body if available.
	(mime-display-message): Reconstruct list every time.

2000-05-02   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-scheme-encrypt-region): Don't quote recipient;
	concatenate all arguments destructively.

2000-04-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.5 is released.

2000-04-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-insert-entity-button): Don't pass
	invisible to mime-insert-button.

2000-04-15  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-preview-text): Ask Content-Transfer-Encoding.
	(mime-display-text): New function.

2000-04-14  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Use decode-coding-string.

2000-04-13   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el: Fix author's mailing address.
	(pgg-gpg-process-region): Add --output option; set status fd to 2.
	(pgg-gpg-possibly-cache-passphrase): New function.
	(pgg-gpg-shell-file-name): Abolish.
	(pgg-gpg-shell-command-switch): Abolish.
	(pgg-scheme-lookup-key): Work on temp buffer.

2000-03-20  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-preview-follow-current-entity): Fix the bug
	without header part.
	(mime-preview-entity-boundary): Fix the case that last part
	is composite type.

2000-03-18  Yoshiki Hayashi  <yoshiki@xemacs.org>
